--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsaj5Az2nk_cRqRirsJLk32BwesmMWDdg&map_ids=38c8a3b446d87535,aa71d40e2d2f11d7">
+  </script>
+
 </head>
 
 <body>
